--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "argon2": "^0.43.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.0",
     "next": "^15.2.3",
